[package]
name = "lazy-transform-str"
version = "0.0.3"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Lazy-copying lazy-allocated scanning `str` transformations.\nThis is good e.g. for (un)escaping text, especially if individual strings are short."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/lazy-transform-str"
homepage = "https://github.com/Tamschi/lazy-transform-str/tree/v0.0.3"
documentation = "https://docs.rs/lazy-transform-str/0.0.3"
keywords = ["str", "lazy", "escape", "replace"]
categories = ["algorithms", "text-processing"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/meta_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

[badges]
travis-ci = { repository = "Tamschi/lazy-transform-str", branch = "develop" }
is-it-maintained-issue-resolution = { repository = "Tamschi/lazy-transform-str" }
is-it-maintained-open-issues = { repository = "Tamschi/lazy-transform-str" }
maintenance = { status = "experimental" }

[dependencies]
cervine = "0.0.4"
smartstring = "0.2.3"
gnaw = "0.0.1"

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"
